--- a/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
@@ -1,2 +1,5 @@
-﻿\section{Lösungskonzept}
-Der Hauptteil der Arbeit umfasst die Konzeption, diverse Funktionsmuster und grundlegende Berechnungen für den autonomen Ballwerfer \enquote{Flywheel}. In den folgenden Abschnitten wird nach dem Ablauf der Aufgabenstellung, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
+\section{Lösungskonzept}
+Der Hauptteil der Arbeit umfasst die Konzeption, diverse Funktionsmuster und 
+grundlegende Berechnungen für den autonomen Ballwerfer \enquote{Flywheel}. 
+In den nachfolgenden Abschnitten werden, dem Prozessablauf folgend, die einzelnen 
+Komponenten des Ballwerfers näher beschrieben. 
