--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -1,6 +1,6 @@
-\section{Von der Recherche zum Feinkonzept}
-Um Eckpfeiler für die zu Beginn des Projekts benötigten \textbf{Recherchen} zu erhalten, musste das Problem grob in seine Einzelteile zerlegt werden. Aus dieser Zerlegung resultierten die Bereiche Kommunikation zwischen elektronischen Geräten, Möglichkeiten zur Objekterkennung und Objektverfolgung, diverse Flugobjekte und Fahrantriebe, Bedarf von Dreh- und Wurfmechanismen sowie das Versorgungskonzept. \\
-Nach der Recherche folgte als nächster Schritt das Erstellen einer  Funktionsskizze, welche in Abbildung \ref{fig:Funktionsskizze} ersichtlich ist, um daraus die einzelnen Teilprobleme zu eruieren.\\
+﻿\section{Von der Recherche zum Feinkonzept}
+Um Eckpfeiler für die zu Beginn des Projekts benötigten \textbf{Recherchen} zu erhalten, musste das Problem grob in seine Teilprobleme zerlegt werden. Aus dieser Zerlegung resultierten die Bereiche Kommunikation zwischen elektronischen Geräten, Möglichkeiten zur Objekterkennung und Objektverfolgung, diverse Flugobjekte und Fahrantriebe, Bedarf von Dreh- und Wurfmechanismen sowie das Versorgungskonzept. \\
+Nach der Recherche folgte als nächster Schritt das Erstellen einer  Funktionsskizze, welche in Abbildung \ref{fig:Funktionsskizze} ersichtlich ist, um die einzelnen Teilprobleme übersichtlich darzustellen.\\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=1\textwidth]{Enddokumentation/Varianten/Bilder/Funktionsskizze.png}
@@ -9,16 +9,19 @@ Nach der Recherche folgte als nächster Schritt das Erstellen einer  Funktionssk
 \end{figure}
 \\\\
 Nach der Ermittlung dieser Teilprobleme mussten für die einzelnen Bereiche nach Lösungsansätzen recherchiert werden. Die Resultate dieser Recherche, sowie die danach folgende Bewertung der gefundenen Lösungen ist aus Platzgründen im Anhang hinterlegt. Um die Ergebnisse der Bewertung sinnvoll als Entscheidungshilfe einsetzen zu können, wurden sie kompakt zu einem \textbf{Grobkonzept} zusammengefasst.\\
+\\
+Jedes Teilproblem ist bezüglich den Vor- und Nachteilen nach den definierten Zielsetzungen bewertet worden. Dadurch lassen sich grafisch, geeignete Kombinationsmöglichkeiten herleiten und untereinander Vergleichen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen, wurden \textbf{vier Varianten} während einer Diskussionsrunde festgelegt.\\
+\\
+\newpage
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=1\textwidth]{Enddokumentation/Varianten/Bilder/Grobkonzept.png}
 	\caption{Grobkonzept}
 	\label{fig:Grobkonzept}
 \end{figure}
+
 \\
-Das Grobkonzept erlaubt es grafisch verschiedene Kombinationsmöglichkeiten aufzuzeigen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen, wurden \textbf{vier Varianten} während einer Diskussionsrunde festgelegt.\\
-\\
-Die blauen Variante ist die Kombination aller Lösungsansätze mit der höchsten Prozentzahl. Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen, das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smartphone-Kamera zu erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werde. Die grüne Variante hat als Ausgangspunkt die Bälle in einem Drehkranz und befördert diese einzeln in den Korb, die restlichen Kriterien werden Kongruent zur zweiten Variante ausgeführt. In der orangen Variante befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt, die übrigen Teilprobleme verwenden wiederum, kongruent zur zweiten Variante eine Smartphone-Kamera zur Korberkennung und ein Akkumulator als Energieversorgung.\\
+Die blaue Variante ist die Kombination aller Lösungsansätze mit der höchsten Prozentzahl. Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen, das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smartphone-Kamera zu erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werden. Die grüne Variante hat als Ausgangspunkt die Bälle in einem Drehkranz und befördert diese einzeln in den Korb, die restlichen Kriterien werden kongruent zur zweiten Variante ausgeführt. In der orangen Variante befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt. Die übrigen Teilprobleme verwenden wiederum, gleich zur zweiten Variante eine Smartphone-Kamera zur Korberkennung und einen Akkumulator als Energieversorgung.\\
 \\\\
 Die \textbf{Entscheidung} fiel auf die orange Variante. Diese bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der Zielsetzung des Teams. \\
 
@@ -28,8 +31,8 @@ Die \textbf{Entscheidung} fiel auf die orange Variante. Diese bietet als gesamte
 \end{tabular}\\
 \\
 \\
-Nach der Entscheidung für eine Variante folgt die weitere Ausarbeitung dieses Konzeptes
-in ein \textbf{Feinkonzept}. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme
-aufgesplittet. Zu jedem Subteilproblemen existieren wiederum Lösungsvarianten. Im Unterschied zum Grobkonzept erfolgt die Bewertung nicht mit Prozenten, sondern werden die Lösungsvarianten miteinander verglichen und nach aktuellem Wissenstand eine oder eventuell auch mehrere Lösungsvarianten ausgewählt. 
+Nach der Entscheidung für eine Variante folgt die weitere Ausarbeitung des Konzeptes
+in einzelne \textbf{Feinkonzepte}. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme
+aufgesplittet. Zu jedem Subteilproblem existieren wiederum Lösungsvarianten. Im Unterschied zum Grobkonzept erfolgt die Bewertung nicht mit Prozenten, sondern werden die Lösungsvarianten miteinander verglichen und nach aktuellem Wissenstand eine oder eventuell auch mehrere Lösungsvarianten ausgewählt. 
 
 
