--- a/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
@@ -1,4 +1,4 @@
-\ifSTANDALONE
+﻿\ifSTANDALONE
 \section{Brushless Motoransteuerung}
 \fi
 \ifEMBED
@@ -28,9 +28,7 @@
         Brushless-Motoren (BLDC-Motoren) sind Synchron-Drehstrom-Motoren. Das bedeutet, sie 
         werden mittels eines kontinuierlichen magnetischen Drehfeldes in Bewegung gesetzt. 
         Dabei ist darauf zu achten, dass der Läufer dem Drehfeld synchron 
-        folgen kann, daher auch die Namensbezeichnung des Motors. Falls der Läufer dem Drehfeld aus irgend 
-        einem Grund nicht folgen kann, so wird keine Spannung vom Rotor in die 
-        Statorwicklungen induziert, die der Erregerspannung entgegenwirkt. 
+        folgen kann, daher auch die Namensbezeichnung des Motors. Falls der Läufer dem Drehfeld nicht folgen kann, wird keine Spannung 	vom Rotor in die         Statorwicklungen induziert, die der Erregerspannung entgegenwirkt. 
         Daraus folgt, dass ein immenser Strom fliesst, der nur von der 
         Wicklungsimpedanz des Motors begrenzt wird.\\
         \ifSTANDALONE
@@ -52,7 +50,7 @@
         zwischen dem Feld und dem Läufer muss eingehalten werden. Wird dieser 
         Winkel überschritten, kommt der Motor zum Stillstand.\\
         \\
-        Die zweite Methode zur Regelung verwendet drei Hallsensoren, die im 
+        Die zweite Methode zur Regelung des Motors verwendet drei Hallsensoren, die im 
         Motor integriert sind. Dies macht den Motor aufwändiger und 
         dementsprechend teurer. Die Regelung mit Hallsensoren ist 
         verhältnismässig einfach, da nach den Signalen die einzelnen Spulen 
