Geräteübersicht + Lösungskonzept ü-arbeitet

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
@@ -1,5 +1,5 @@
 \section{Lösungskonzept}
 Der Hauptteil der Arbeit umfasst die Konzeption, diverse Funktionsmuster und 
-grundlegende Berechnungen für den autonomen Ballwerfer \enquote{Flywheel}. 
+grundlegende Berechnungen für den autonomen Ballwerfer. 
 In den nachfolgenden Abschnitten werden, dem Prozessablauf folgend, die einzelnen 
 Komponenten des Ballwerfers näher beschrieben. 
