kleine bearbeitungen am abstract

--- a/Dokumentation/Enddokumentation/Abstract.tex
+++ b/Dokumentation/Enddokumentation/Abstract.tex
@@ -1,2 +1,2 @@
-\section*{Abstract}
-In der nachfolgenden Dokumentation wird der Prozess der Konzeptfindung für die Herstellung eines autonomen Ballwerfers beschrieben. Durch die Aufteilung der Aufgabenstellung in Problembereiche werden mehrere grobe Konzepte geschaffen. Von den erstellten Konzepten wurde eines weiter zu einem Feinkonzept ausgearbeitet, in welchem sämtliche verwendeten Komponenten spezifiziert werden. Als erstes wird das Startsignal von einem Laptop drahtlos via WLAN übertragen. Daraufhin lokalisiert der Ballwerfer den Korb unter Verwendung eines Smartphones, auf welchem eine entsprechende App läuft. Ist die Position einmal bestimmt, wird diese an den Controller weitergegeben, welcher die Stepper für die Ausrichtung des Werfers betätigt und anschliessend die Motoren für die Ballzuführung startet. Der Ballwerfer selbst ist statisch und richtet sich an der Startposition für einen gewinkelten Wurf aus. Einmal ausgerichtet, werden die Bälle einzeln unter Verwendung von Schwungrädern geworfen.
+﻿\section*{Abstract}
+In der nachfolgenden Dokumentation wird der Prozess der Konzeptfindung für die Herstellung eines autonomen Ballwerfers beschrieben. Durch die Aufteilung der Aufgabenstellung in Problembereiche werden mehrere grobe Konzepte geschaffen. Von den erstellten Konzepten wurde eines weiter zu einem Feinkonzept ausgearbeitet, in welchem sämtliche verwendeten Komponenten spezifiziert werden. Als erstes wird das Startsignal von einem Laptop drahtlos via WLAN übertragen. Daraufhin lokalisiert der Ballwerfer den Korb unter Verwendung eines Smartphones, auf welchem eine entsprechende App läuft. Ist die Position einmal bestimmt, wird diese an den Controller weitergegeben, welcher ein Steppermotor für die Ausrichtung des Werfers betätigt und anschliessend die Motoren für die Ballzuführung startet. Der Ballwerfer ist statisch in der Mitte des Startfeldes positioniert und richtet sich für einen gewinkelten Wurf aus. Einmal ausgerichtet, werden die Bälle einzeln unter Verwendung von Schwungrädern geworfen.
