--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -1,4 +1,4 @@
-﻿\section{Von der Recherche zum Feinkonzept}
+\section{Von der Recherche zum Feinkonzept}
 Um Eckpfeiler für die zu Beginn des Projekts benötigten \textbf{Recherchen} zu erhalten, musste das Problem grob in seine Teilprobleme zerlegt werden. Aus dieser Zerlegung resultierten die Bereiche Kommunikation zwischen elektronischen Geräten, Möglichkeiten zur Objekterkennung und Objektverfolgung, diverse Flugobjekte und Fahrantriebe, Bedarf von Dreh- und Wurfmechanismen sowie das Versorgungskonzept. \\
 Nach der Recherche folgte als nächster Schritt das Erstellen einer  Funktionsskizze, welche in Abbildung \ref{fig:Funktionsskizze} ersichtlich ist, um die einzelnen Teilprobleme übersichtlich darzustellen.\\
 \begin{figure}[h!]
@@ -20,7 +20,7 @@ Jedes Teilproblem ist bezüglich den Vor- und Nachteilen nach den definierten Zi
 	\label{fig:Grobkonzept}
 \end{figure}
 
-\\
+
 Die blaue Variante ist die Kombination aller Lösungsansätze mit der höchsten Prozentzahl. Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen, das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smartphone-Kamera zu erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werden. Die grüne Variante hat als Ausgangspunkt die Bälle in einem Drehkranz und befördert diese einzeln in den Korb, die restlichen Kriterien werden kongruent zur zweiten Variante ausgeführt. In der orangen Variante befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt. Die übrigen Teilprobleme verwenden wiederum, gleich zur zweiten Variante eine Smartphone-Kamera zur Korberkennung und einen Akkumulator als Energieversorgung.\\
 \\\\
 Die \textbf{Entscheidung} fiel auf die orange Variante. Diese bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der Zielsetzung des Teams. \\
