--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -23,7 +23,7 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 \begin{figure}[h!]
 	\begin{tabular}{|c|c|p{7.5cm}|}
 		\hline \textbf{Pos} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
-		\hline 1 & Startgerät (Smartphone) & Senden des Startbefehls, Empfangen des Endbefehl, Akustische und visuelle Signalausgabe
+		\hline 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, Akustische und visuelle Signalausgabe
 		\\ 
 		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden des Endbefehls,
 		Fotografieren, Auswerten und Steuern des Controllers
