--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -7,10 +7,10 @@ Er besteht hauptsächlich aus zwei Acrylglasplatten, in welcher alle mechanische
 Dadurch kann der ganze Aufbau schnell und einfach angepasst oder geändert werden. 
 Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher in der drehenden Abwurfeinheit angebracht ist. 
 Dadurch kann die Bauhöhe des Ballwerfers tief gehalten werden, was einen grossen Stabilitätsvorteil bietet. 
-Die Drehachse der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzens angebracht. 
+Die Drehachse der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzen angebracht. 
 Somit bleibt die Abwurfposition der Tennisbälle konstant am gleichen Ort.\\
 Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, 
-der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens geregelten Förderband. 
+der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens gesteuerten Förderband. 
 Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, 
 damit alle Tennisbälle die gleiche Startenergie aufweisen. 
 Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. \\
