--- a/Dokumentation/Enddokumentation/Loesungskonzept/Startgeraet.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Startgeraet.tex
@@ -1,3 +1,7 @@
 \subsubsection{Startgerät}
-Die Übermittlung des Startsignals wird mittels Bluetooth realisiert. Sender des Signals ist ein Windows Computer mit integrierten Bluetooth Adapter (Laptop) der Empfänger wird ein Android Smartphone sein. Wie aus der Technologierecherche(siehe Anhang) zu entnehmen ist gewährleistet diese Konstellation grosse Freiheit bei der Umsetzung, da beide Betriebssysteme relativ offen sind und beide Java unterstützen.
-Ein weiterer Vorteil des Smartphones ist, dass ein benötigtes Endsignal über die integrierten Lautsprecher als akustisches Signal oder über den Display als eine visuelle Ausgabe erfolgen kann.
+Die Übermittlung des Startsignals wird mittels Bluetooth realisiert. 
+Sender des Signals ist ein Windows Computer mit integriertem Bluetooth Adapter (Notebook). Der Empfänger wird ein Android Smartphone sein.
+Wie aus der Technologierecherche (siehe Anhangsdokument) zu entnehmen, gewährleistet diese Konstellation grosse Freiheit bei der Umsetzung, 
+da beide Betriebssysteme relativ offen sind und beide die Programmiersprache Java unterstützen.
+Ein weiterer Vorteil des Smartphones ist, dass ein benötigtes Endsignal über die integrierten Lautsprecher 
+als akustisches Signal oder über den Display als eine visuelle Ausgabe erfolgen kann.
